testsuite/tests/grammar/invalid_rule_dup/test.lkt
import lexer_example

@with_lexer(foo_lexer)
grammar foo_grammar {
    sec_rule <- ExampleNode("example")
    @main_rule main_rule <- list*(sec_rule)
    sec_rule <- ExampleNode("example")
}

@abstract
class FooNode implements Node[FooNode] {
}

class ExampleNode: FooNode {
}
