testsuite/tests/grammar/invalid_rule_dup/test.out
== test.lkt ==
test.lkt:7:17: error: Rule 'sec_rule' is already present in the grammar
7 |     sec_rule <- ExampleNode("example")
  |                 ^^^^^^^^^^^^^^^^^^^^^^


lkt_compile: Done
